--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <body>
   <main>
     <h1>KAKAO MAP</h1>
+
+    <nav>
+      <button class="trafficToggle">Traffic ON</button>
+    </nav>
     <figure id="map"></figure>
   </main>
 </body>
