making marker point to roadview

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <button class="trafficToggle">Traffic ON</button>
 
     <figure id="map"></figure>
+    <figure id="view"></figure>
   </main>
 </body>
 
