뷰토글 - 맵/로드뷰

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 
 
     <button class="trafficToggle">Traffic ON</button>
-
-    <figure id="map"></figure>
-    <figure id="view"></figure>
+    <button class="viewToggle">Roadview ON</button>
+    <section class="frame">
+      <figure id="map" class="on"></figure>
+      <figure id="view"></figure>
+    </section>
   </main>
 </body>
 
